2000-09-20  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* w3m.el: Add declaration of dependency on APEL.
	(w3m-quit): When other w3m buffers exist, don't destruct cache.

2000-09-20  Shun-ichi GOTO  <gotoh@taiyo.co.jp>

	* w3m.el (w3m-command-arguments): Remove option -m, that's not good
	for bookmark / local file handling.

2000-09-19  Shun-ichi GOTO  <gotoh@taiyo.co.jp>

	* w3m.el (w3m-command-arguments): Add -m option explicitly.
	(w3m-exec): Ad-hoc change to view .txt object. It's temporary
	fix. Should we consider type? w3m option -dump_head may help us.
	(w3m-exec): Get title and remove both format <title_alt> and
	<title>.
	(w3m-view-this-url): Force reloading by prefix.
	(w3m-view-current-url-with-external-browser): Works correctly.
	(w3m-print-current-url): Push url to kill king to paste later.
	(w3m-print-this-url): ditto.
	(w3m-mailto-url): Use rfc2368.el instead of mailto.el.
	(w3m-goto-url): Add 2nd argument RELOAD to withdraw data cached on
	emacs.
	(w3m-reload-this-page): Simplified by using new w3m-goto-url.
	(w3m): Set mode-line-buffer-identification after changing major
	mode because it overwrite that variable.

2000-09-19  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* w3m.el (w3m-fontify): Add code to handle irregular ordered
	elements of anchor tags.
	(w3m-mailto-url): Adopt for Emacs-19.
	(w3m-input-url): Call `w3m-backlog-setup' to initialize
	`w3m-backlog-hashtb'.

2000-09-19  Shun-ichi GOTO  <gotoh@taiyo.co.jp>

	* w3m.el (w3m): Sorry, over paren.

2000-09-18  Shun-ichi GOTO  <gotoh@taiyo.co.jp>
	
	* w3m.el (w3m-exec): Get title correctly within -halfdump format
	of w3m.
	(w3m-mouse-view-this-url): New function to view page by clicking
	mouse middle button.
	(w3m-mode-map): Assign mouse middle button to view page.
	(w3m): Change mode-line spec to show title of current page.

2000-09-18  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* w3m.el: Add authors.

2000-09-18  Shun-ichi GOTO  <gotoh@taiyo.co.jp>
